--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "module": "commonjs",
         "moduleResolution": "node",
-        "target": "es6",
+        "target": "esnext",
         "noUnusedLocals": true,
         "noFallthroughCasesInSwitch": true,
         "noImplicitReturns": true,
