--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/Spensaur-K/sync-sharedarraybuffer#readme",
   "devDependencies": {
+    "mocha": "^3.5.0",
     "ts-loader": "^2.3.2",
     "typescript": "^2.4.2",
     "webpack": "^3.4.1"
