--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A collection of synchronization primitives for use with SharedArrayBuffer and Atomics",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha --reporter spec"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
