--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "noFallthroughCasesInSwitch": true,
       "noImplicitReturns": true,
       "strict": true,
+      "alwaysStrict": true,
       "noUnusedParameters": true
    },
    "files": [
