--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,11 @@
       "noImplicitReturns": true,
       "strict": true,
       "alwaysStrict": true,
-      "noUnusedParameters": true
+      "noUnusedParameters": true,
+      "declaration": true,
+      "declarationDir": "dist",
    },
    "files": [
-      "src/main.ts"
+      "src/lib.ts"
    ]
 }
